@@ -1,6 +1,6 @@
 Package: ips
-Version: 0.0-10
-Date: 2017-03-14
+Version: 0.0.11
+Date: 2018-09-19
 Title: Interfaces to Phylogenetic Software in R
 Author: Christoph Heibl <christoph.heibl@gmx.net>
 Maintainer: Christoph Heibl <christoph.heibl@gmx.net>
