@@ -8,6 +8,7 @@ export(deleteGaps)
 export(descendants)
 export(eoi)
 export(fixNodes)
+export(forceEqualTipHeights)
 export(gblocks)
 export(index2DNAbin)
 export(mafft)
@@ -30,6 +31,7 @@ export(prank)
 export(raxml)
 export(raxml.partitions)
 export(rbeauti)
+export(rc)
 export(read.fas)
 export(read.nex)
 export(read.phy)
